fix(shared/ui): correct padding in summaryWrap

--- a/src/shared/ui/accordion/Accordion.module.scss
+++ b/src/shared/ui/accordion/Accordion.module.scss
@@ -9,7 +9,7 @@
 }
 
 .summaryWrap {
-  padding: rem(15) rem(20);
+  padding: rem(15) 0;
   display: flex;
   align-items: center;
   column-gap: rem(20);
